--- a/src/components/game/board/board.css
+++ b/src/components/game/board/board.css
@@ -10,6 +10,12 @@
   background-color: #fff;
   border: 1px solid #aaa;
 }
+#box{
+  width:500px;
+  height: 200px;
+  overflow-x: auto;
+  border: 2px solid gray;
+}
 
 .board-wrapper {
   display: flex;
