--- a/src/components/MyGames/MyGames.scss
+++ b/src/components/MyGames/MyGames.scss
@@ -1,9 +1,13 @@
+main {
+  margin: 5%;
+}
+
 .header {
   display: flex;
   flex-direction: row;
   justify-content: space-between; 
   align-items: center;
-  margin: 5%;
+  margin-bottom: 5%;
 }
 
 .my-games-icon {
