--- a/src/components/game/ClassRoom.scss
+++ b/src/components/game/ClassRoom.scss
@@ -16,6 +16,15 @@
   height: auto;
 }
 
+.avatar-container {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  margin-top: 5%;
+  justify-content: space-between;
+}
+
 .avatar {
   width: 150px;
   height: 150px;
@@ -23,7 +32,14 @@
   background-image: url("./profile-placeholder.svg");
   background-repeat: no-repeat;
   background-size: contain;
-  margin-top: 5%;
+}
+
+.avatar-buttons {
+  width: 40%;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-end;
 }
 
 .section-game {
