--- a/src/components/MyGames/CopyLink.scss
+++ b/src/components/MyGames/CopyLink.scss
@@ -1,6 +1,6 @@
 .copy-link-container {
   width: 100%;
-  height: 100%;
+  height: auto;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -17,8 +17,10 @@
   width: 95%;
   height: auto;
   color: #3f51b5;
-  border: none;
+  border: #3f51b5 solid 2px;
   font-size: larger;
+  border-radius: 5px;
+  padding: 5px;
 }
 
 .buttons {
@@ -34,11 +36,12 @@
   background-color: #3f51b5;
   color: white;
   border: none;
-  font-size: small;
-  padding: 4px 10px 0 10px;
+  font-size: 0.8em;
+  padding: 6px 10px 4px 10px;
   border-radius: 5px;
   margin-right: 10%;
   cursor: pointer;
+  line-height: 1.2em;
 }
 
 .copy-button:hover {
