--- a/src/components/game/ClassRoom.scss
+++ b/src/components/game/ClassRoom.scss
@@ -36,7 +36,7 @@
 
 .avatar-buttons {
   width: 40%;
-  height: 100%;
+  height: auto;
   display: flex;
   flex-flow: column nowrap;
   justify-content: flex-end;
@@ -54,18 +54,17 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 535px;
-  border: #3f51b5 solid 2px;
-  
+  height: auto;
 }
 
 .game-area-title {
-  width: 75%;
+  width: 90%;
   height: auto;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  margin-bottom: 1%;
+  justify-content: flex-end;
+  margin-bottom: 3%;
+  margin-right: 3%;
 }
 
 .game-area {
@@ -73,9 +72,9 @@
   flex-direction: row;
   flex-wrap: wrap;
   align-items: center;
+  align-content: center;
   width: 90%;
-  height: 86%;
-  padding-left: 7%;
+  height: 90%;
   margin-bottom: 3%;
 }
 
