--- a/src/components/game/card/card.scss
+++ b/src/components/game/card/card.scss
@@ -3,6 +3,9 @@
   display: inline-block;
   border: 2px solid #3f51b5;
   margin: 2px 2px;
+  width: 24%;
+  height: 24%;
+  //display: inline-flex;
   // background-color: #3f51b5;
   // background-blend-mode: luminosity;
 }
@@ -34,4 +37,9 @@
 .back {
   z-index: 2;
   transform: rotateY(180deg);
+}
+
+img {
+  max-width: 100%;
+  max-height: 100%;
 }
